* 20231103 Fix unreliable results certificate/hostname verification
* 20231104 Switch to using IO::Socket::IP by default.  Fall back to
           IO::Socket::INET/INET6; deprecate the use of these libraries #43
* 20231105 Remove deprecated ability to infer filename vs. inline data for
           --data, --body, --attach, and --attach-body options
* 20231105 Fix bug which caused the "I really mean a filename" @sigil to
           be included in the attachment filename in the body of the email.
           It is now stripped from the filename before use (#55)
* 20231110 implement --tls-chain (based on initial implementation by
           Wolfgang Karall-Ahlborn in #60)
* 20231126 In prep for handling peer chains properly, change the printing
           of local cert labeling from local/chain to local[i], but
           only if there is more than one local cert.
* 20231130 Flesh out printing of certs to include notBefore/After,
           commonName (not as part of the DN), and subjectAltName
* 20231130 Show debug for entire peer cert chain, not just for the end
           cert (#73)
* 20231202 Add --tls-get-peer-chain option.  Analogous to --tls-get-peer-cert
           but shows every cert sent by the peer, not just the first one (#72)
* 20231203 Reorganize TLS internals to make support easier
* 20231203 Switch method for getting peer certs, making debug way more
           reliable
* 20231203 Clean up the output when we print local and peer cert info, make it
           more compact and uniform
* 20240102 Update copyright year to 2024
* 20240102 Print all available certificate information even if TLS was not
           successfully negotiated
* 20240102 Rework tls verification. On cert verification failure, print
           openssl's error message.  Get rid of verify callback.
* 20240102 Clarify --tls-verify-ca docs, this verifies both signing and
           date expiration (notBefore/notAfter)
* 20240103 Previously-deprecated option -g removed entirely